--- a/reactive time test game/index.html
+++ b/reactive time test game/index.html
@@ -10,7 +10,10 @@
 
 <body>
 	<div id="container">
-		<p class="head">Your Reactive Time </p>
+		<p class="head">Your Reactive Time 
+		<br/>
+		<h5>Please Click The Shape Box</h5>
+		</p>
 		<div class="res">
 			<spam id="time">0</spam>
 		</div>
